--- a/app/src/main/res/drawable/red_dot.xml
+++ b/app/src/main/res/drawable/red_dot.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="#e50000"/>
+        android:color="#FFADB7"/>
 </shape>
