--- a/app/src/main/res/layout/dialog_select_picture.xml
+++ b/app/src/main/res/layout/dialog_select_picture.xml
@@ -7,17 +7,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/btnCancel"
+        android:layout_above="@+id/atvCancel"
         android:background="@drawable/bg_white_rounded"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/btnSelectPhoto"
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/atvSelectPhoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@android:color/transparent"
             android:gravity="center"
+            android:padding="10dp"
             android:text="@string/select_photo"
             android:textAllCaps="false"
             android:textColor="@color/grey" />
@@ -27,13 +28,14 @@
             android:layout_height="0.1dp"
             android:background="@color/light_gray"></View>
 
-        <Button
-            android:id="@+id/btnTakeNewPhoto"
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/atvTakeNewPhoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@android:color/transparent"
             android:gravity="center"
+            android:padding="10dp"
             android:text="@string/take_new_photo"
             android:textAllCaps="false"
             android:textColor="@color/grey" />
@@ -43,28 +45,30 @@
             android:layout_height="0.1dp"
             android:background="@color/light_gray"></View>
 
-        <Button
-            android:id="@+id/btnOption3"
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/atvOption3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@android:color/transparent"
             android:gravity="center"
+            android:padding="10dp"
             android:text="@string/option_3"
             android:textAllCaps="false"
             android:textColor="@color/grey" />
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnCancel"
+    <android.support.v7.widget.AppCompatTextView
+        android:id="@+id/atvCancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/bg_white_rounded"
         android:gravity="center"
+        android:padding="10dp"
         android:text="@string/cancel"
         android:textAllCaps="false"
         android:textColor="@color/red_color" />
