--- a/app/src/main/res/layout/fragment_schedule_view.xml
+++ b/app/src/main/res/layout/fragment_schedule_view.xml
@@ -18,46 +18,32 @@
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_toLeftOf="@+id/img_pin"
-            android:layout_toRightOf="@+id/back_layout"
+           android:layout_centerInParent="true"
             android:layout_marginTop="15dp"
-            android:text=""
+            android:text="wewe"
             android:ellipsize="end"
             android:maxLines="1"
             android:paddingRight="5dp"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
-        <LinearLayout
-            android:id="@+id/back_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+
 
             <ImageView
                 android:id="@+id/img_close"
                 android:layout_height="@dimen/action_bar_icon_height"
                 android:layout_width="@dimen/action_bar_icon_height"
                 android:padding="@dimen/action_bar_icon_padding"
+                android:onClick="onClick"
                 android:layout_centerVertical="true"
                 android:src="@drawable/btn_back_arrow" />
 
-            <TextView
-                android:id="@+id/txt_back"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/img_close"
-                android:text="@string/str_back"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
-        </LinearLayout>
+
 
         <ImageView
-            android:id="@+id/img_pin"
-           style="@style/ActionBarIcon"
+            android:id="@+id/img_edit"
+            android:onClick="onClick"
+            style="@style/ActionBarIcon"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/icon_edit" />
@@ -213,6 +199,8 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
+                android:gravity="center"
+                android:id="@+id/description_section"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp">
 
@@ -220,15 +208,13 @@
                     android:id="@+id/description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:textColor="@color/schedule_title_bg_color"
                     android:text=""
                     android:textSize="14sp"/>
             </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="0.1dp"
-                android:background="@android:color/darker_gray" />
+
 
             <LinearLayout
                 android:id="@+id/tab_bar"
@@ -236,6 +222,7 @@
                 android:layout_height="55dp"
                 android:weightSum="4"
                 android:gravity="center"
+                android:background="#f4f4f4"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -269,7 +256,7 @@
                             android:text=""
                             android:layout_gravity="center_horizontal"
                             android:textColor="@color/schedule_title_bg_color"
-                            android:textSize="10sp" />
+                            android:textSize="11sp" />
 
                 </LinearLayout>
 
@@ -389,12 +376,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="40dp"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
+                <ImageView
+                        android:id="@+id/call_client"
+                        android:src="@drawable/ic_call_blue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:text="Call Client"
+                        android:textSize="12sp"
+                        android:onClick="onClick"
+                        android:textColor="@color/white" />
                 <Button
-                    android:id="@+id/call_client"
+                        android:visibility="gone"
+                    android:id="@+id/call_client2"
                     android:layout_width="120dp"
                     android:layout_height="40dp"
                     android:background="@drawable/curve_blue_background"
