--- a/app/src/main/res/layout/schedule_map_info_window.xml
+++ b/app/src/main/res/layout/schedule_map_info_window.xml
@@ -14,13 +14,13 @@
         android:layout_centerVertical="true"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image"
             android:layout_width="50dp"
             android:layout_margin="5dp"
             android:layout_height="50dp"
 
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             android:src="@drawable/default_avatar" />
     </LinearLayout>
 
