--- a/app/src/main/res/layout/activity_coworker.xml
+++ b/app/src/main/res/layout/activity_coworker.xml
@@ -14,14 +14,15 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerInParent="true"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="0dp"
             android:text="Co-Workers"
             android:textColor="@color/white"
             android:textSize="17sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:id="@+id/textView5"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/back_layout"
+            android:layout_marginStart="29dp" />
 
         <LinearLayout
             android:onClick="onClick"
@@ -69,6 +70,7 @@
             android:paddingTop="5dp">
 
             <ImageView
+                android:onClick="onClick"
                 android:layout_width="20dp"
                 android:layout_height="18dp"
                 android:layout_centerVertical="true"
@@ -83,6 +85,17 @@
                 android:textSize="12sp" />
 
         </LinearLayout>
+
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            android:layout_marginRight="5dp"
+            android:src="@drawable/add_icon"
+            android:layout_alignParentTop="true"
+            android:layout_toStartOf="@+id/ok_but"
+            android:layout_marginEnd="29dp"
+            android:onClick="onClick"
+            android:id="@+id/add" />
 
     </RelativeLayout>
 
