--- a/app/src/main/res/layout/fragment_add_sales.xml
+++ b/app/src/main/res/layout/fragment_add_sales.xml
@@ -7,7 +7,7 @@
     <RelativeLayout
             android:id="@+id/top_layout"
             android:layout_width="match_parent"
-            android:background="@drawable/background_layout"
+
             android:layout_height="@dimen/action_bar_height">
         <TextView
                 android:layout_width="wrap_content"
@@ -28,7 +28,13 @@
                 android:layout_alignParentLeft="true"
                 android:src="@drawable/btn_close" />
 
-
+        <ImageView
+                android:id="@+id/add"
+                style="@style/ActionBarIcon"
+                android:onClick="onClick"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/add_icon" />
 
 
         <ImageView
@@ -48,39 +54,8 @@
             android:layout_height="match_parent"
 
             android:orientation="vertical">
-        <RelativeLayout
-                android:id="@+id/top_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_centerInParent="true"
-                    android:layout_marginTop="0dp"
-                    android:text="Add a Sale"
-                    android:textColor="@color/white"
-                    android:textSize="17dp"
-                android:textStyle="bold" />
 
-            <LinearLayout
-                    android:id="@+id/back_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:layout_alignParentTop="true"
-                    android:orientation="horizontal"
-                android:layout_centerVertical="true">
 
-                <ImageView
-                        android:id="@+id/img_close"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:onClick="goBack"
-
-                    android:layout_marginLeft="10dp"
-                        android:src="@drawable/btn_back_arrow" />
 
         <ScrollView android:layout_width="match_parent"
                     android:layout_height="0dp"
@@ -123,11 +98,42 @@
 
             </LinearLayout>
             <LinearLayout style="@style/SeperatorHorizontal" />
+
+            <LinearLayout android:layout_width="match_parent"
+android:visibility="gone"
+                          android:layout_height="wrap_content"
+                          android:gravity="center_vertical"
+                          android:onClick="onClick"
+                          android:id="@+id/select_line_layout"
+                          android:orientation="horizontal">
+                <ImageView
+                        android:onClick="onClick"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:padding="15dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="15dp"
+                        android:src="@drawable/icon_layer_blue" />
+                <TextView android:layout_width="0dp"
+                          android:layout_weight="1"
+                          style="@style/EditTextStyle"
+                          android:textColor="@color/schedule_title_bg_color"
+                          android:layout_height="wrap_content"
+                          android:text="Select Line"
+                          android:textSize="15dp" />
+                <ImageView android:layout_width="20dp"
+                           android:layout_height="20dp"
+                           android:src="@drawable/right_arrow"/>
+
+            </LinearLayout>
+            <LinearLayout style="@style/SeperatorHorizontal"
+                          />
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:gravity="center_vertical"
                           android:onClick="onClick"
-                          android:id="@+id/select_client"
+                          android:id="@+id/select_client_layout"
                           android:orientation="horizontal">
                 <de.hdodenhof.circleimageview.CircleImageView
                         android:onClick="onClick"
@@ -145,6 +151,7 @@
                 <TextView android:layout_width="0dp"
                           android:layout_weight="1"
                           style="@style/EditTextStyle"
+                          android:id="@+id/client_name"
                           android:textColor="@color/schedule_title_bg_color"
                           android:layout_height="wrap_content"
                 android:text="Select Client"
@@ -156,36 +163,8 @@
                     android:textSize="15dp" />
 
             </LinearLayout>
-            <LinearLayout style="@style/SeperatorHorizontal"
-            android:visibility="gone"/>
-            <LinearLayout android:layout_width="match_parent"
-                          android:visibility="gone"
-                          android:layout_height="wrap_content"
-                          android:gravity="center_vertical"
-                          android:onClick="onClick"
-                          android:id="@+id/select_line"
-                          android:orientation="horizontal">
-                <ImageView
-                        android:onClick="onClick"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:padding="15dp"
-                        android:layout_alignParentLeft="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="15dp"
-                        android:src="@drawable/icon_layer_blue" />
-                <TextView android:layout_width="0dp"
-                          android:layout_weight="1"
-                          style="@style/EditTextStyle"
-                          android:textColor="@color/schedule_title_bg_color"
-                          android:layout_height="wrap_content"
-                          android:text="Select Line"
-                    android:textSize="15dp" />
-                <ImageView android:layout_width="20dp"
-                           android:layout_height="20dp"
-                           android:src="@drawable/right_arrow"/>
 
-            </LinearLayout>
+
             <LinearLayout style="@style/SeperatorHorizontal" />
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
@@ -212,18 +191,20 @@
                     <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total Sales to Record"
+                    android:text="Amount of Sales to Record"
                     android:id="@+id/textView8"
                     android:textColor="@color/grey"
                     android:layout_marginTop="5dp"
                     android:textSize="10dp" />
 
-                    <EditText android:layout_width="match_parent"
+                    <EditText
+                            android:layout_width="match_parent"
                         style="@style/EditTextStyle"
                         android:textColorHint="@color/light_gray2"
                         android:textColor="@color/grey"
                         android:textSize="15sp"
                         android:layout_height="35dp"
+                            android:id="@+id/sale_amount"
                         android:text="4500"
                         android:inputType="numberDecimal" />
                 </LinearLayout>
@@ -318,9 +299,13 @@
                     android:text="I am thinking we should get this to work as soon as we can becuase of the"
                     android:textColor="@color/schedule_title_bg_color" />
             </LinearLayout>
+            <LinearLayout style="@style/SeperatorHorizontal"
+            android:layout_marginBottom="10dp"/>
+
 
 
         </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
 
