--- a/app/src/main/res/layout/fragment_add_sales.xml
+++ b/app/src/main/res/layout/fragment_add_sales.xml
@@ -76,7 +76,7 @@
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp">
+                    android:layout_marginLeft="63dp">
 
                 <TextView
                         android:layout_width="wrap_content"
@@ -212,7 +212,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:id="@+id/select_date"
-                            android:background="@color/white"
+                 android:background="@color/white"
                 android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/img_timer"
@@ -226,8 +226,10 @@
                 <LinearLayout android:layout_width="match_parent"
                     android:layout_weight="1"
                     android:textColorHint="@color/grey"
-                    android:hint="Date of Sales"
                     android:textSize="15sp"
+
+                              android:clickable="false"
+                              android:focusable="false"
                     android:textColor="@color/grey"
                     android:layout_height="wrap_content"
                     android:text=""
@@ -241,6 +243,9 @@
                         android:layout_height="wrap_content"
                         android:text="Date sale was made"
                         android:textColor="@color/grey"
+
+                        android:clickable="false"
+                        android:focusable="false"
                         android:layout_marginTop="5dp"
                         android:textSize="10dp" />
 
@@ -250,6 +255,8 @@
                         android:textColorHint="@color/light_gray2"
                         android:textColor="@color/grey"
                         android:textSize="13sp"
+                        android:clickable="false"
+                        android:focusable="false"
 
                         android:layout_marginTop="4dp"
                         android:layout_height="wrap_content"
